<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:id="@+id/scrollView">

    <RelativeLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#FFFBC9"
                android:orientation="vertical">

            <!-- Start Linear Layout Header -->
            <LinearLayout
                    android:id="@+id/HeaderLinearLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFF1B5">

                <!-- Start Blank Space -->
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight=".2"/>
                <!-- End Blank Space -->

                <!-- Start Header Logo Image -->
                <ImageView
                        android:id="@+id/logo_index"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:src="@drawable/icon_logopanjang"
                        android:contentDescription="@string/app_name"/>
                <!-- End Header Logo Image -->

                <!-- Start Blank Space -->
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight=".2"/>
                <!-- End Blank Space -->

            </LinearLayout>
            <!-- End Linear Layout Header -->

            <!-- Start Text View Ubah Galeri -->
            <TextView
                    android:id="@+id/ubah_galeri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#D046F2"
                    android:text="@string/ubah_galeri"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="20dp"/>
            <!-- End Text View Ubah Galeri -->

            <!-- Start Linear Layout Content -->
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="50dp">

                <!-- Start Linear Layout Nama -->
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="5dp">

                    <!-- Start Text View Nama -->
                    <TextView
                            android:id="@+id/text_galeri_nama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#D046F2"
                            android:text="@string/galeri_nama"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"/>
                    <!-- End Text View Tanggal Lahir -->

                    <!-- Start Text View Nama -->
                    <TextView
                            android:id="@+id/galeri_nama"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FF0000"
                            android:hint="@string/dash"
                            android:focusable="false"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_marginLeft="5dp"/>
                    <!-- End Text View Nama-->

                </LinearLayout>
                <!-- End Linear Layout Nama -->

                <!-- Start Linear Layout Tanggal -->
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp" 
                        android:layout_marginBottom="5dp">

                    <!-- Start Text View Tanggal -->
                    <TextView
                            android:id="@+id/text_galeri_tanggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#D046F2"
                            android:text="@string/galeri_tanggal"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"/>
                    <!-- End Text View Tanggal -->

                    <!-- Start Edit Text Tanggal -->
                    <EditText
                            android:id="@+id/galeri_tanggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FF0000"
                            android:focusable="false"
                            android:hint="@string/hint_galeri_tanggal"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"/>
                    <!-- End Edit Text Tanggal -->

                </LinearLayout>
                <!-- End Linear Layout Tanggal -->

                <!-- Start Linear Layout Usia -->
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dp">

                    <!-- Start Text View Usia -->
                    <TextView
                            android:id="@+id/text_galeri_usia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#D046F2"
                            android:text="@string/galeri_usia"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"/>
                    <!-- End Text View Usia -->


                    <!-- Start Text View Usia -->
                    <TextView
                            android:id="@+id/galeri_usia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FF0000"
                            android:hint="@string/dash"
                            android:focusable="false"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_marginLeft="5dp"/>
                    <!-- End Text View Usia -->

                </LinearLayout>
                <!-- End Linear Layout Usia -->

                <!-- Start Linear Layout Content -->
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="20dp">

                    <!-- Start Blank Space -->
                    <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight=".3"/>
                    <!-- End Blank Space -->

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            android:layout_weight="1">

                        <!-- Start Linear Layout Foto -->
                        <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_weight="1"
                                android:layout_marginBottom="5dp">

                            <!-- Start Text View Foto -->
                            <TextView
                                    android:id="@+id/text_galeri_foto"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#D046F2"
                                    android:text="@string/galeri_foto"
                                    style="@android:style/TextAppearance.DeviceDefault.Medium"/>
                            <!-- End Text View Foto -->

                        </LinearLayout>
                        <!-- End Linear Layout Foto -->

                        <!-- Start Image View Foto -->
                        <ImageView
                                android:id="@+id/galeri_foto"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:src="@drawable/icon_tambahfoto"
                                android:contentDescription="@string/app_name"
                                android:layout_weight="1"
                                android:layout_gravity="center"/>
                        <!-- End Image View Foto -->

                    </LinearLayout>

                    <!-- Start Blank Space -->
                    <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight=".3"/>
                    <!-- End Blank Space -->

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                        <!-- Start Text View Keterangan -->
                        <TextView
                                android:id="@+id/text_galeri_keterangan_foto"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#D046F2"
                                android:text="@string/galeri_keterangan_foto"
                                style="@android:style/TextAppearance.DeviceDefault.Medium"
                                android:layout_marginBottom="5dp"/>
                        <!-- End Text View Keterangan -->

                        <!-- Start Text View Keterangan -->
                        <EditText
                                android:id="@+id/galeri_keterangan_foto"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:textColor="#FF0000"
                                android:hint="@string/galeri_keterangan_hint_foto"
                                android:minHeight="130dp"
                                android:gravity="top"
                                style="@android:style/TextAppearance.DeviceDefault.Medium"/>
                        <!-- End Text View Keterangan-->

                    </LinearLayout>

                    <!-- Start Blank Space -->
                    <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight=".3"/>
                    <!-- End Blank Space -->
                    
                </LinearLayout>
                <!-- End Linear Layout Content -->

                <!-- Start Linear Layout Content -->
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="20dp">

                    <!-- Start Blank Space -->
                    <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>
                    <!-- End Blank Space -->

                    <!-- Start Image View Button Simpan -->
                    <ImageView
                            android:id="@+id/button_simpan"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:src="@drawable/tombol_simpan"
                            android:contentDescription="@string/app_name"/>
                    <!-- End Image View Button Simpan -->

                    <!-- Start Blank Space -->
                    <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>
                    <!-- End Blank Space -->

                </LinearLayout>
                <!-- End Linear Layout Content -->

                <!-- Start Blank Space -->
                <View
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight=".2"
                        android:layout_marginBottom="30dp"/>
                <!-- End Blank Space -->

            </LinearLayout>
            <!-- End Linear Layout Content -->

        </LinearLayout>

        <!-- Start Relative Layout Footer -->
        <RelativeLayout
                android:id="@+id/footerRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF1B5"
                android:layout_alignParentBottom="true">

            <!-- Start Text Footer -->
            <TextView
                    android:id="@+id/text_footer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textColor="#D046F2"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/text_footer"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"/>
            <!-- End Text Footer -->

        </RelativeLayout>
        <!-- End Relative Layout Footer -->

    </RelativeLayout>

</ScrollView>