<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:layout_marginBottom="40dp"
            android:id="@+id/scrollView">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

        <!-- Start Blank Space -->
        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".2"/>
        <!-- End Blank Space -->

        <!-- Start Linear Layout Alert Akses -->
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical"
                android:background="#FFFDC9"
                android:layout_weight="1">

            <!-- Start Text View Alert Warning -->
            <TextView
                    android:id="@+id/alert_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#D046F2"
                    android:text="@string/alert_warning"
                    style="@android:style/TextAppearance.DeviceDefault.Medium" android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"/>
            <!-- End Text View Alert Warning -->

            <!-- Start Text View Alert Akses -->
            <TextView
                    android:id="@+id/alert_akses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textColor="#D046F2"
                    android:text="@string/alert_akses"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"/>
            <!-- End Text View Alert Akses -->

            <!-- Start Linear Layout Button -->
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_marginBottom="20dp">

                <!-- Start Blank Space -->
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight=".5"/>
                <!-- Start Blank Space -->

                <!-- Start Image View Button Ok -->
                <ImageView
                        android:id="@+id/button_ok"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:src="@drawable/tombol_ok"
                        android:contentDescription="@string/app_name"/>
                <!-- End Image View Button Ok -->

                <!-- Start Blank Space -->
                <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight=".5"/>
                <!-- Start Blank Space -->

            </LinearLayout>
            <!-- End Linear Layout Button -->

        </LinearLayout>
        <!-- End Linear Layout Profil -->

        <!-- Start Blank Space -->
        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".2"/>
        <!-- Start Blank Space -->

    </LinearLayout>
</ScrollView>